ingress.yml
apiVersion: networking.k8s.io/vl
kind: Ingress
metadata:
  name: my—ingress
  annotations:
    nginx. ingress. kubernetes. io/ rewrite-target : /$1
spec:
  rules:
    - host: projects-api.info
      http:
        paths:
          — path: /
          pathType: Prefix
          backend:
            service:
              name: projects-api
              port:
                number: 8080
    - host: express-api.info
    http:
      paths:
        — path: /
        pathType: Prefix
        backend:
          service:
            name: express-api
            port:
              number: 3000
